--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": {
+    "packages": ["packages/*"],
+    "nohoist": ["**/@nestjs", "**/@nestjs/**"]
+  },
   "scripts": {
     "api": "yarn workspace api",
     "web": "yarn workspace web",
