--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,9 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.8",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.6.5",
+    "argon2": "^0.28.5",
+    "graphql": "^16.3.0",
+    "mongoose": "^6.2.8",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
